# selgetabel

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  REFACTOR_SUMMARY.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  问题记录.md
apps/api/: .env.example  Dockerfile  README.md  README_DATABASE.md  SSE_SPEC.md  STEPS_STORAGE_SPEC.md  USAGE.md  cli.py  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/migration_sqls/: init_database.sql
apps/api/alembic/versions/: 219e20ee3b9c_initial_migration.py  648d4ca39b77_.py  d54da0e106ee_simplify_thread_turn_steps.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  main.py
apps/api/app/api/routes/: auth.py  chat.py  excel.py  file.py  fixture.py  thread.py
apps/api/app/core/: config.py  excel_generator.py  excel_parser.py  executor.py  functions.py  llm_client.py  models.py  parser.py  prompt.py  step_tracker.py
apps/api/app/engine/: __init__.py  excel_generator.py  excel_parser.py  executor.py  functions.py  llm_client.py  models.py  parser.py  prompt.py  step_tracker.py
apps/api/app/events/: __init__.py  bus.py  types.py
apps/api/app/models/: __init__.py  btrack.py  thread.py  user.py
apps/api/app/persistence/: __init__.py  turn_repository.py
apps/api/app/processor/: __init__.py  excel_processor.py  prompt.py  types.py
apps/api/app/schemas/: auth.py
apps/api/app/services/: auth.py  excel.py  fixture.py  oss.py  processor_stream.py  thread.py
apps/api/scripts/: export_sql.py
deploy/: nginx.conf
(+79 files in other folders)
